--- a/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
@@ -33,7 +33,7 @@
                         display: none;
                     }
                 }
-                
+
                 .country-radio:checked ~ input[type=text].iso-alpha-2 {
                     display: inline-block;
                 }
@@ -43,13 +43,25 @@
                 display: block;
                 font-size: smaller;
                 text-transform: uppercase;
+                cursor: pointer;
 
                 &:before {
-                    content: '(';
+                    //content: '(';
                 }
 
                 &:after {
-                    content: ')';
+                    //content: ')';
+                    border-style: solid;
+                    border-width: 0.25em 0.25em 0 0;
+                    content: '';
+                    display: inline-block;
+                    height: 0.75em;
+                    left: 0.15em;
+                    position: relative;
+                    top: -0.15em;
+                    transform: rotate(135deg);
+                    vertical-align: middle;
+                    width: 0.75em;
                 }
 
                 .single-count {
