--- a/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
@@ -19,11 +19,20 @@
   .territories-list .single-territory .territory-info .territory-children-counts {
     display: block;
     font-size: smaller;
-    text-transform: uppercase; }
-    .territories-list .single-territory .territory-info .territory-children-counts:before {
-      content: '('; }
+    text-transform: uppercase;
+    cursor: pointer; }
     .territories-list .single-territory .territory-info .territory-children-counts:after {
-      content: ')'; }
+      border-style: solid;
+      border-width: 0.25em 0.25em 0 0;
+      content: '';
+      display: inline-block;
+      height: 0.75em;
+      left: 0.15em;
+      position: relative;
+      top: -0.15em;
+      transform: rotate(135deg);
+      vertical-align: middle;
+      width: 0.75em; }
     .territories-list .single-territory .territory-info .territory-children-counts .single-count {
       display: inline-block; }
 
