--- a/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
@@ -84,17 +84,62 @@
     }
 }
 .advanced-addresses {
+
+    input[type=radio].for-tabulation {
+        display: none;
+    }
+
+    #tabshipping:checked ~ div.shipping-address,
+    #tabbilling:checked ~ div.billing-address {
+        display: block;
+    }
+
+    label.for-tabulation {
+        background-color: #f4f4f4;
+        padding: 5px 10px;
+        display: inline-block;
+        cursor: pointer;
+        border-color: #8eaebe;
+        border-image: none;
+        border-style: solid solid solid;
+        border-width: 1px 1px medium;
+        border-radius: 5px 5px 0px 0px;
+    }
+
+    input.for-tabulation:checked + label.for-tabulation {
+        border-top: 3px solid #8eaebe;
+    }
+
     .order-address-editor {
-        .shipping-address {
+        border: 1px solid #d2d6de;
+
+        &.shipping-address, &.billing-address {
+            display: none;
         }
 
-        .billing-address {
-        }
 
-        .address-editor{
-            .address-input{
+        .address-editor {
+            .address-input {
                 display: inline-block;
-                .hint{
+
+                .row {
+                    margin-left: 0px;
+                    margin-right: 0px;
+
+                    label {
+                        font-size: smaller;
+                        display: inline-block;
+                    }
+                }
+
+                &.address-text-input {
+                    input, select {
+                        width: 100%;
+                        min-width: unset;
+                    }
+                }
+
+                .hint {
                     display: inline-block;
                 }
             }
