--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -10946,9 +10946,18 @@ sub.badge {
     border-style: dashed;
 }
 
-.overlay {
+.overlay, .thumbnail .overlay {
     padding: 4px;
     bottom: 40px;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: right;
+    font-size: 12px;
+    opacity: 0.6;
+    height: 40px;
 }
 
 .overlay-default {
