--- a/src/Themes/KrakeAdmin/Views/Parts/Common.Metadata.SummaryAdmin.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Parts/Common.Metadata.SummaryAdmin.cshtml
@@ -46,7 +46,7 @@
     <li>
         @if (modifiedUtc.HasValue) {
             <label class="text-normal" title="@modifiedUtc.Value.ToString(cultureInfo)">
-                @T("Last modified: {0}", Display.DateTimeRelative(DateTimeUtc: modifiedUtc.Value)) &nbsp;&#124;&nbsp;
+                @T("Last modified: {0}", Display.DateTimeRelative(DateTimeUtc: modifiedUtc.Value))&nbsp;
             </label>
         }
     </li>
