--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.AdvancedAddress.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.AdvancedAddress.cshtml
@@ -6,28 +6,41 @@
     in the view for OrderPart addresses will reflect on this view and
     on the partials used for each address here. *@
 @{ 
+    Style.Require("Bootstrap");
+    Style.Require("FontAwesome");
+    Script.Require("Bootstrap");
     Style.Require("NwazetIntegration.Admin");
+
+    var shippingId = Html.Id("shipping-tab");
+    var billingId = Html.Id("billing-tab");
 }
 
-<div class="order-editor advanced-addresses col-md-12">
-    <input id="tabshipping" type="radio" name="address-tabs" class="for-tabulation" checked />
-    <label for="tabshipping" class="for-tabulation">@T("Shipping Address")</label>
-    <input id="tabbilling" type="radio" name="address-tabs" class="for-tabulation" />
-    <label for="tabbilling" class="for-tabulation">@T("Billing Address")</label>
-    <div class="order-address-editor shipping-address col-md-12">
-        @Html.EditorFor(m => m.ShippingAddressVM,
-            new {
-                OtherElementSelector = ".order-editor .addresses fieldset.shipping-address",
-                OtherPrefix = "NwazetCommerceOrder"
-            })
-    </div>
+<div class="order-editor advanced-addresses col-md-12 nav-tabs-custom">
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a href="#@shippingId" data-toggle="tab" aria-expanded="true">@T("Shipping Address")</a>
+        </li>
+        <li class="">
+            <a href="#@billingId" data-toggle="tab" aria-expanded="false">@T("Billing Address")</a>
+        </li>
+    </ul>
+    
+    <div class="tab-content">
+        <div id="@shippingId" class="tab-pane active order-address-editor shipping-address col-md-12">
+            @Html.EditorFor(m => m.ShippingAddressVM,
+                new {
+                    OtherElementSelector = ".order-editor .addresses fieldset.shipping-address",
+                    OtherPrefix = "NwazetCommerceOrder"
+                })
+        </div>
 
-    <div class="order-address-editor billing-address col-md-12">
-        @Html.EditorFor(m => m.BillingAddressVM,
-            new {
-                OtherElementSelector = ".order-editor .addresses fieldset.billing-address",
-                OtherPrefix = "NwazetCommerceOrder"
-            })
+        <div id="@billingId" class="tab-pane order-address-editor billing-address col-md-12">
+            @Html.EditorFor(m => m.BillingAddressVM,
+                new {
+                    OtherElementSelector = ".order-editor .addresses fieldset.billing-address",
+                    OtherPrefix = "NwazetCommerceOrder"
+                })
+        </div>
     </div>
 </div>
 
