--- a/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
@@ -36,41 +36,20 @@
     .territories-list .single-territory .territory-info .territory-children-counts .single-count {
       display: inline-block; }
 
-.advanced-addresses input[type=radio].for-tabulation {
-  display: none; }
+.advanced-addresses > ul > li {
+  min-height: unset; }
 
-.advanced-addresses #tabshipping:checked ~ div.shipping-address,
-.advanced-addresses #tabbilling:checked ~ div.billing-address {
-  display: block; }
-
-.advanced-addresses label.for-tabulation {
-  background-color: #f4f4f4;
-  padding: 5px 10px;
-  display: inline-block;
-  cursor: pointer;
-  border-color: #8eaebe;
-  border-image: none;
-  border-style: solid solid solid;
-  border-width: 1px 1px medium;
-  border-radius: 5px 5px 0px 0px; }
-
-.advanced-addresses input.for-tabulation:checked + label.for-tabulation {
-  border-top: 3px solid #8eaebe; }
-
-.advanced-addresses .order-address-editor {
-  border: 1px solid #d2d6de; }
-  .advanced-addresses .order-address-editor.shipping-address, .advanced-addresses .order-address-editor.billing-address {
-    display: none; }
-  .advanced-addresses .order-address-editor .address-editor .address-input {
+.advanced-addresses .order-address-editor .address-editor .address-input {
+  display: inline-block; }
+  .advanced-addresses .order-address-editor .address-editor .address-input .row {
+    margin-left: 0px;
+    margin-right: 0px; }
+    .advanced-addresses .order-address-editor .address-editor .address-input .row label {
+      font-size: smaller;
+      display: inline-block;
+      color: black; }
+  .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input input, .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input select {
+    width: 100%;
+    min-width: unset; }
+  .advanced-addresses .order-address-editor .address-editor .address-input .hint {
     display: inline-block; }
-    .advanced-addresses .order-address-editor .address-editor .address-input .row {
-      margin-left: 0px;
-      margin-right: 0px; }
-      .advanced-addresses .order-address-editor .address-editor .address-input .row label {
-        font-size: smaller;
-        display: inline-block; }
-    .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input input, .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input select {
-      width: 100%;
-      min-width: unset; }
-    .advanced-addresses .order-address-editor .address-editor .address-input .hint {
-      display: inline-block; }
