--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -507,9 +507,14 @@ legend {
 }
 
 .critical.message, .validation-summary-errors {
-    border-radius: 10px;
-    padding: 10px;
+    background-color: #dd4b39 !important;
+    color: #fff !important;
+    border-color: #d73925;
+    padding-right: 35px;
+    padding: 15px;
     margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
 
 .slabel-on {
@@ -11486,3 +11491,12 @@ label {
 select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text-small:focus, input.textMedium:focus, input.text-medium:focus, .permalink input.text:focus {
     border-color: #3c8dbc;
 }
+
+.callout a, .callout a:visited, .callout a:link {
+    font-weight: bold;
+    color: #ffffff;
+    text-decoration: underline;
+}
+    .callout a:hover {
+        color: #efefef;
+    }
