--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -1218,7 +1218,7 @@ fieldset {
     margin: 0;
     border: 0;
     min-width: 0;
-   padding-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 .add,
@@ -11480,10 +11480,12 @@ label {
     font-weight: bold;
     padding: 0 0 0.3em 0;
 }
+
 .box {
     border: 1px solid #f6f6f6;
     border-top: 3px solid #d2d6de;
 }
+
 .small-box .icon {
     top: 10px;
 }
@@ -11497,6 +11499,61 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
     color: #ffffff;
     text-decoration: underline;
 }
+
     .callout a:hover {
         color: #efefef;
     }
+
+.contentItems.bulk-items .summary .related a:not(.btn) {
+    /*threat as buttons btn btn-primary btn-xs all links in SummaryAdmin related*/
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    /*btn*/
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid transparent;
+    /*btn-primary*/
+    background-color: #3c8dbc;
+    border-color: #367fa9;
+    color: #fff;
+    /*btn-xs*/
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 1.5;
+    padding: 1px 5px;
+}
+
+.contentItems.bulk-items .summary .related a[itemprop="RemoveUrl UnsafeUrl"]:not(.btn) {
+    background-color: #dd4b39 !important;
+    border-color: #d73925;
+}
+
+.contentItems.bulk-items .summary .related a:not(.btn):hover, .contentItems .summary .related a:not(.btn):active {
+    background-color: #367fa9;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.contentItems.bulk-items .summary .related a.btn {
+    color: #fff;
+    margin-left: 5px;
+}
