--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -1284,6 +1284,7 @@ fieldset {
             background-color: #337ab7;
             border-color: #337ab7;
         }
+
         .pager > li > span {
             border-radius: 0;
         }
@@ -11554,6 +11555,18 @@ select:focus, textarea:focus, input.text:focus, input.text-box:focus, input.text
     .callout a:hover {
         color: #efefef;
     }
+
+.callout.callout-information {
+    color: #fff !important;
+    background-color: #dd4b39 !important;
+    border-color: #c23321;
+}
+
+.callout.callout-error {
+    color: #fff !important;
+    background-color: #dd4b39 !important;
+    border-color: #c23321;
+}
 
 .contentItems.bulk-items .summary .related a:not(.btn) {
     /*threat as buttons btn btn-primary btn-xs all links in SummaryAdmin related*/
