add required to postal code

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/AddressForm.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/AddressForm.cshtml
@@ -86,8 +86,8 @@
                value="@Model.Province" />
     }
     <div class="hint">@T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States.")</div>
-    <label for="@Html.Id(prefix + ".PostalCode")">@T("Postal or ZIP code")</label>
-    <input id="@Html.Id(prefix + ".PostalCode")" type="text" name="@Html.Name(prefix + ".PostalCode")" value="@address.PostalCode" class="input-small" />
+    <label for="@Html.Id(prefix + ".PostalCode")" class="required">@T("Postal or ZIP code")</label>
+    <input id="@Html.Id(prefix + ".PostalCode")" type="text" name="@Html.Name(prefix + ".PostalCode")" value="@address.PostalCode" class="input-small required" />
 </div>
 @using (Script.Foot()) {
 <script type="text/javascript">
