--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
@@ -150,8 +150,9 @@
             @EditorForString(m => m.PostalCode,
                 label: T("Postal Code"),
                 hint: T("Postal or ZIP code"),
+                required: true,
                 placeholder: T("Postal or ZIP code"),
-                classes: "text-small",
+                classes: "text-small required",
                 divClass: "col-md-3 col-sm-3 col-xs-3")
 
         </div>
